# discourse-email-in-lambda

./: .gitignore  Cargo.toml  README.md
src/: lambda.rs  main.rs
