[package]
name = "discourse-email-in-lambda"
version = "0.2.2"
authors = ["Leo McArdle <leo@mozilla.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["openssl/vendored"]

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
openssl = "0.10"
lambda_runtime = "^0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple-error = "^0.2.1"
reqwest = "^0.9.20"
failure = "^0.1.5"
rusoto_core = "^0.40.0"
rusoto_s3 = "^0.40.0"
futures = "^0.1.28"
"tokio" = "0.1"
log = "*"
env_logger = "^0.6.2"
regex = "^1"

[[bin]]
name = "bootstrap"
# path = "src/main.rs"
path = "src/lambda.rs"
