[package]
name = "discourse-email-in-lambda"
version = "0.2.2"
authors = ["Leo McArdle <leo@mozilla.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["openssl/vendored"]

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
aws-config = "0.55.2"
aws-sdk-s3 = "0.27.0"
openssl = "0.10"
lambda_runtime = "0.8.0"
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["ses"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple-error = "^0.2.1"
reqwest = { version = "^0.11.17", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
log = "*"
env_logger = "^0.6.2"
regex = "^1"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"
