[package]
name = "discourse-email-in-lambda"
version = "0.2.2"
authors = ["Leo McArdle <leo@mozilla.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["openssl/vendored"]

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
aws-config = "0.55.2"
aws_lambda_events = { version = "0.8.5", default-features = false, features = ["ses"] }
aws-sdk-s3 = "0.27.0"
env_logger = "^0.10.0"
lambda_runtime = "0.8.0"
log = "0.4.17"
openssl = "0.10.45"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros"] }

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"
